Add linter & fix lint errors
